시노님 매칭 의도 확인(Confirm) 로직 고도화 및 DTO 기반 세션 예외 해결